Jan 3, 2008

  * TS: Modified error messages of declare_stored_constraints
	option, to distinguish between stored, temporarily stored
	and never stored.
  * TS: write/1, writeln/1 and format/2 are now treated as non-binding
	builtins.
  * TS: Properly inline inthash constraint lookup.

Dec 31, 2007

  * TS: Additional assertion # default(Goal) for the
	declare_stored_constraints, which specifies that
	an unconditional simplification rule for the constraint
	must be added to the end of the program. The Goal
	parameter specifies the goal of that rule, e.g.
	true or fail or throw(...). Experimental.

Dec 29, 2007

  * TS: Experimental option declare_stored_constraints for
	telling the compiler to warn for stored constraints
	that are not asserted to be stored. Use the
		:- chr_constraint f(...) # stored.
	notation for asserting that a constraint is expected to
	be stored.

Dec 27, 2007

  * TS: Inline constraint lookup.
 
  * TS: Precompile term hashing.
 
Sep 26, 2007

  * TS: Code cleaning was hampered by line numbers.
	Reported by Mike Elston.

May 2, 2007

  * PVW: Bug fix in observation analysis.
  * PVW: Consistency checks of experimental history pragma.

Apr 5, 2007

  * TS: Lessened worst bottlenecks in CHR compiler,
	in the guard simplification phase.

Mar 26, 2007

  * TS: Experimental dynattr option, for dynamic size attribute terms.

Mar 16, 2007

  * TS: Extended observation analysis (abstract interpretation)
	to deal with disjunctions. With Paolo Tacchella.

Mar 14, 2007

  * TS: Renamed hprolog:substitute/4 to substitute_eq/4, because of
	name conflict with library(edit).

Mar 12, 2007

  * TS: Use line numbers in error and warning messages.

Mar 8, 2007

  * TS: Added maintenance of line numbers through CHR compilation
	as an option: chr_option(line_numbers,on).

Mar 5, 2007

  * TS: Bug fix: setarg/3 instantiation error reported by Mike Elston.
	Caused by missing suspension argument in debug off, optimize off
	mode.

Feb 22, 2007
